Fix labels in setting missing border
Background and border where moved to a different class, because it was also used for badges.
Move it back.

--- a/app/javascript/flavours/glitch/styles/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/accounts.scss
@@ -208,11 +208,6 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-}
-
-.information-badge,
-.simple_form .recommended,
-.simple_form .not_recommended {
   background-color: rgba($ui-secondary-color, 0.1);
   border: 1px solid rgba($ui-secondary-color, 0.5);
 }
